@@ -10,6 +10,7 @@ ver 0.16.4 (2011/??/??)
   - vorbis: don't send end-of-stream on flush
 * output:
   - alsa: fix SIGFPE when alsa announces a period size of 0
+  - httpd: don't warn on client disconnect
 
 
 ver 0.16.3 (2011/06/04)
